	unbreak compilation on systems without large files
	cygwin support disabled
	frmdir works now. It didnt worked due to adding new access rights
	  DIR_NOLIST and DIR_NOGET
	MACHINES updated. Builds confirmed on Ubuntu 8.04.3,
	  FreeBSD 6.4 and FreeBSD 7.2
	fsetupcmd added to fspmerge client
	SCons can now build SGML FSP FAQ if sgmlfmt is found during build
	  process
	GNU autotools build system was entirely replaced by SCons  

Version 2.8.1b24 - 19 Feb 2005
	use getopt from stdio.h instead of getopt.h in fspscan.c
	  fspscan now compiles on AIX and other OS without glibc (hoaxter)
	!! fixed fatal bug from b23. Server sends large packets to clients if
	  client request has not prefered reply size inside. This confuses
	  all old fsp clients.
	common/strdup.c removed
	bsd_src/function.c bcopy -> memmove
	removed STDC_HEADER checks, drop support for pre-ANSI compilers
	started work on alternate SCons based build system
	fspd: use urandom, not random -> avoid hangs on Lin suck 2.6
	build system converted to SCons
	!! fixed directory listing bug in client library introduced in beta23
	improvements to security of FSP clients
	  seq. numbers are now randomized
	  seed random number generator in fsp clients
	  check cmd in received packets
	  check pos in received packets

Version 2.8.1b23 - 14 Jan 2005
	use srandomdev for seeding of client seq. number generator
	make dirlister smarter - save one RTT per each directory listings
	Locking uses unsigned int sized key, not unsigned short
	Locking type can be specified by ./configure --with-locking=
	Lock prefix can be specified by ./configure --with-lockprefix=
	All 5 locking subsystems synced against fsplib and fspclient code base
	Do not use CC_STAT when doing directory listing -- performace gain.
	  This saves 1 RTT per directory listing.
	clients: do not send CC_BYE to the server on exit if we can keep server
	  key for next invocation. Saves 1 RTT.
	!! Major client utils speedup: Directory listings are now 3 RTT