@@ -33,7 +33,9 @@ Version 2.8.1b25 - testing in progress
 	fsetupcmd added to fspmerge client
 	SCons can now build SGML FSP FAQ if sgmlfmt is found during build
 	  process
-	GNU autotools build system was entirely replaced by SCons  
+	GNU autotools build system was entirely replaced by SCons
+        fspmerge now prints short help text if it is invoked with unknown
+	  command name.
 
 Version 2.8.1b24 - 19 Feb 2005
 	use getopt from stdio.h instead of getopt.h in fspscan.c
